<package>
  <name>rwt_rosparam_marc</name>
  <version>0.0.0</version>
  <description>rwt_rosparam_marc</description>
  <maintainer email="F-ROSROBO@fsi.co.jp">F-ROSROBO</maintainer>
  <author email="F-ROSROBO@fsi.co.jp">F-ROSROBO</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rwt_rosparam_marc</url>
  <url type="bugtracker">https://github.com/robo-marc/visualization_rwt/issues</url>
  <url type="repository">https://github.com/robo-marc/visualization_rwt</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbridge_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>roswww</build_depend>

  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>roswww</run_depend>

  <export></export>
</package>
