<package>
  <name>rwt_topic_marc</name>
  <version>0.0.0</version>
  <description>rwt_topic_marc</description>
  <maintainer email="F-ROSROBO@fsi.co.jp">F-ROSROBO</maintainer>
  <author>fsi Nanami</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rwt_topic_marc</url>
  <url type="bugtracker">https://github.com/robo-marc/visualization_rwt/issues</url>
  <url type="repository">https://github.com/robo-marc/visualization_rwt</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbridge_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rwt_utils_3rdparty</build_depend>
  <build_depend>rwt_utils_marc</build_depend>
  <build_depend>roswww</build_depend>

  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
  <run_depend>rwt_utils_marc</run_depend>
  <run_depend>roswww</run_depend>

  <export></export>
</package>
