<?xml version="1.0"?>
<package>
  <name>rwt_utils_marc</name>
  <version>0.0.3</version>
  <description>The rwt_utils_marc package</description>

  <maintainer email="garaemon@gmail.com">Ryohei Ueda</maintainer>
  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</maintainer>
  <license>BSD</license>
  <author email="garaemon@gmail.com">Ryohei Ueda</author>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
