<?xml version="1.0"?>
<package>
  <name>rwt_utils_marc</name>
  <version>0.0.3</version>
  <description>The rwt_utils_marc package</description>

  <maintainer email="F-ROSROBO@fsi.co.jp">F-ROSROBO</maintainer>
  <author>fsi Nanami</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
